--- a/2-Authorization/0-call-api-vanillajs/API/ToDoListAPI/appsettings.json
+++ b/2-Authorization/0-call-api-vanillajs/API/ToDoListAPI/appsettings.json
@@ -1,8 +1,8 @@
 {
   "AzureAd": {
-    "Instance": "https://Enter_the_Tenant_Subdomain_Here.ciamlogin.com/",
-    "TenantId": "Enter_the_Tenant_Id_Here",
-    "ClientId": "Enter_the_Application_Id_Here",
+    "Instance": "https://exthn2025.ciamlogin.com/",
+    "TenantId": "2744ce4b-6c74-4383-9e49-d4efddb5fb18",
+    "ClientId": "606234e3-a749-4618-8831-224aec13cff4",
     "Scopes": {
       "Read": ["ToDoList.Read", "ToDoList.ReadWrite"],
       "Write": ["ToDoList.ReadWrite"]
