--- a/2-Authorization/0-call-api-vanillajs/API/ToDoListAPI/ToDoListAPI.csproj
+++ b/2-Authorization/0-call-api-vanillajs/API/ToDoListAPI/ToDoListAPI.csproj
@@ -15,5 +15,6 @@
     <PackageReference Include="Microsoft.Identity.Web" Version="2.9.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.15" Condition="'$(Configuration)' == 'Debug'" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
   </ItemGroup>
 </Project>
